--- a/index.html
+++ b/index.html
@@ -9,8 +9,26 @@
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+ <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-database.js"></script>
+ <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+ 
+ <script>
+   // Your web app's Firebase configuration
+   var firebaseConfig = {
+     apiKey: "AIzaSyD9cZhvDDYfPFN-lSzTYuZIzpsCCJ1fLI0",
+     authDomain: "cc35-89f94.firebaseapp.com",
+     databaseURL: "https://cc35-89f94-default-rtdb.firebaseio.com",
+     projectId: "cc35-89f94",
+     storageBucket: "cc35-89f94.appspot.com",
+     messagingSenderId: "887590010842",
+     appId: "1:887590010842:web:ccac4e730817d3624acae3"
+   };
+   // Initialize Firebase
+   firebase.initializeApp(firebaseConfig);
 
-<script>
   // Your web app's Firebase configuration
 
   // Initialize Firebase
